<resources>
    <string name="app_name">BTLAppVideo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    //menu
    <string name="item_category">Categories</string>
    <string name="item_hotvideo">Hot Video</string>
    <string name="item_history">Video History</string>
    <string name="item_favourite">Video Favourite</string>

    <string name="title_activity_play_video">PlayVideoActivity</string>

    //User
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>

    //Button
    <string name="oke">Register</string>
</resources>
