<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Activity.RegisterActivity">

    <ImageView
        android:src="@drawable/logo"
        android:layout_above="@id/lletRegister"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"/>

    <LinearLayout
        android:id="@+id/lletRegister"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/username"
                android:layout_marginTop="@dimen/_5sdp"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/etUserName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/password"
                android:layout_marginTop="@dimen/_5sdp"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/fullname"
                android:layout_marginTop="@dimen/_5sdp"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/etFullName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/email"
                android:layout_marginTop="@dimen/_5sdp"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"/>
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btnOke"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:background="@drawable/button_login"
        android:layout_below="@id/lletRegister"
        android:text="@string/oke"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="wrap_content"/>
</RelativeLayout>